--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -229,6 +229,7 @@ height: 24px;
   object-fit: cover;
   width: 100%;
   height: 550px;
+  opacity: 70%;
 }
 
 .top-part {
