--- a/assets/css/single-director-page-styles.css
+++ b/assets/css/single-director-page-styles.css
@@ -278,6 +278,7 @@
     object-fit: cover;
     width: 100%;
     height: 550px;
+    opacity: 70%;
   }
   
   .top-part {
