--- a/assets/css/watchlist-styles.css
+++ b/assets/css/watchlist-styles.css
@@ -232,6 +232,7 @@ nav {
   object-fit: cover;
   width: 100%;
   height: 550px;
+  opacity: 70%;
 }
 
 .top-part {
